# dotfiles

./: .env  .gitattributes  .gitignore  .gitmodules  .kopiaignore  README.md  dotbot.age.yaml  dotbot.links.yaml  dotbot.once.lib.yaml  dotbot.registry.yaml  dotbot.scoop.yaml  dotbot.test-plugins.yaml  mise.toml  rulesync.jsonc  taskfile.yaml
.rulesync/: hooks.json  mcp.json  mcp.jsonc  permissions.json  permissions.jsonc
.rulesync/subagents/: semble-search.md
apps/scoop/: .kopiaignore
dotbot-plugins/dotbot-age/: LICENSE  README.md  USAGE.md  age.py  example.yaml  pyproject.toml  test_age.py
dotfiles/: .bash_profile  .bashrc  .gitconfig  .profile  .shinit
dotfiles/.config/: .gitignore
manifests/: ansible-collection.yaml  apt.yaml  bin-linux.yaml  bin.yaml  brew-app-devops.yaml  brew-app-downloader.yaml  brew-app-file.yaml  brew-app-kernel.yaml  brew-app-layer.yaml  brew-app-network.yaml  brew-app-process.yaml  brew-app-shell.yaml  brew-app-text.yaml  brew-app-toolbox.yaml  brew-app-video.yaml  brew-app-vps.yaml  cargo-unix.yaml  cargo.yaml  choco.yaml  claude.yaml  codex.yaml  conda-create.yaml  dotnet-tool.yaml  go.yaml  k8s-helm-repo.yaml  k8s-krew-unix.yaml  k8s-krew.yaml  npm.yaml  pipx-unix.yaml  pipx.yaml  playnite.yaml  rclone.yaml  rye.yaml  scoop-app-audio.yaml  scoop-app-devops.yaml  scoop-app-file.yaml  scoop-app-fonts.yaml  scoop-app-kernel.yaml  scoop-app-layer.yaml  scoop-app-network.yaml  (+15 more)
mise/: mise.ansible.toml  mise.python.toml  mise.web.toml
nix/home-manager/: apps-shell.nix  shell.nix
private/: .gitignore  .wakatime.cfg.age  README.md  claude.settings.json.age  gickup-private.yaml.age  gickup-public.yaml.age  gickup-stars.yaml.age  git-sync.yaml.age  pubkey.txt  ruler.toml.age
pub-merge-recursive/Registry/: disable-blank-password-limit.reg  disable-recent-docs.reg  disable-security-features.reg  disable-uac.reg  env-scoop.reg  (+6 more)
registry/: set-powershell-utf8.reg  svc-disable-NfsClnt.reg
taskfile.d/: ansible.yaml  apt.yaml  astro.yaml  bin.yaml  brew.yaml  cargo.yaml  choco.yaml  claude.yaml  conda.yaml  dotnet.yaml  go.yaml  k8s.yaml  manifest.yaml  npm.yaml  pi.yaml  pipx.yaml  playnite.yaml  rye.yaml  scoop.yaml  skills.yaml  stack.yaml  vfox.yaml  volta.yaml  w2.yaml  winget.yaml  wsl.yaml  x-cmd.yaml  yum.yaml
(+95 files in other folders)
